--- a/sys/readme
+++ b/sys/readme
@@ -1,1 +1,18 @@
 
+The sub-folder **win** contains the following **5** Windows system files:<br>
+- `/mnt/c/Users/claudio/.wslconfig`<br>
+- `/mnt/c/Users/claudio/.bashrc`<br>
+- `/mnt/c/Users/claudio/.bash_profile`<br>
+- `/mnt/c/Users/claudio/.emacs`<br>
+- `/mnt/c/Users/claudio/emma`<br>
+
+The sub-folder **wsl** contains the following **5** WSL system files:<br>
+- `/home/talarico/.bashrc`<br>
+- `/home/talarico/.bash_aliases`<br>
+- `/home/talarico/.profile`<br>
+- `/etc/wsl.conf`<br>
+- `/etc/fstab`<br>
+
+
+
+   
